Fix NewDrawArea alignment and add no negative number validator in NewDrawingComponent form

--- a/client/src/app/components/work-zone/work-zone.component.scss
+++ b/client/src/app/components/work-zone/work-zone.component.scss
@@ -2,6 +2,13 @@
   background-color: grey;
   width: 100%;
   height: 100%;
-  display:inline-block;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
   overflow: auto;
+}
+
+app-draw-area {
+  height: 100%;
+  width: 100%;
 }
